fixed layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 .App {
   text-align: center;
+  background-color: #333842;
+  height: 100%;
 }
 
 .App-header {
   background-color: #333842;
   min-height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -251,16 +254,23 @@ input[type='checkbox'] {
   cursor: pointer;
 
 }
-
+/*
 .thread-page-container {
+  height: 100%;
   position: absolute;
-  z-index: 10;
+  z-index: auto;
   top: 0;
   text-align: left;
   padding-left: 150px;
   padding-right: 150px;
-  margin-top: 150px;
+  margin-top: 100px;
   margin-bottom: 100px;
+}
+*/
+.thread-page-container {
+  position: relative;
+  padding: 15vh;
+
 }
 
 .thread-page-title {
